<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    tools:context=".MainSettingsActivity" >

    <TextView
        android:id="@+id/textView1"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/notifications"
        android:textAppearance="?android:attr/textAppearanceLarge" />

    <CheckBox
        android:id="@+id/show_nofifications"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="showNotificationClicked"
        android:text="@string/show_notifications" />

    <CheckBox
        android:id="@+id/enable_sound"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="enableSoundClicked"
        android:text="@string/enable_sound" />

    <CheckBox
        android:id="@+id/enable_vibration"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:onClick="enableVibrationClicked"
        android:text="@string/enable_vibration" />

</LinearLayout>